--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mysten/dapp-kit": "^0.19.9",
     "@mysten/seal": "^0.9.4",
     "@mysten/sui": "^1.45.0",
+    "@mysten/suins": "^0.9.10",
     "@tanstack/react-query": "^5.90.10",
     "next": "16.0.3",
     "react": "19.2.0",
