refactor: Remove Deprecated Files and Update Project Structure
- Deleted outdated documentation files including DEPLOYMENT.md, HACKATHON_SUBMISSION.md, REAL_SEAL_INTEGRATION_V2.md, REAL_SEAL_SETUP_COMPLETE.md, SEAL_INTEGRATION_FINAL.md, SEAL_INTEGRATION.md, SEAL_REAL_INTEGRATION.md, SETUP.md, and frontend README.md to streamline the project.
- Updated package.json to reflect the new project name "walron" and revised the description for clarity.
- Enhanced README.md to provide a comprehensive overview of the Walron platform, emphasizing its privacy-first approach and key features.
- Adjusted frontend components to align with the new branding and project structure, ensuring consistency across the application.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "web3-patreon",
+  "name": "walron",
   "version": "1.0.0",
-  "description": "Decentralized creator platform built on Sui Stack with Walrus and Seal",
+  "description": "Walron - Privacy-first creator platform built on Sui Stack (Walrus + Seal)",
   "scripts": {
     "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
@@ -12,14 +12,17 @@
     "contracts:deploy": "cd contracts && sui client publish --gas-budget 100000000"
   },
   "keywords": [
+    "walron",
     "sui",
     "walrus",
     "seal",
     "web3",
-    "patreon",
+    "creator-platform",
     "blockchain",
     "decentralized",
-    "creator-economy"
+    "creator-economy",
+    "encryption",
+    "privacy"
   ],
   "author": "",
   "license": "MIT",
