chore: Update Branding and Descriptions Across Project Files
- Revised package.json to update the project description to "Web3 Patreon (Seal + Walrus) built on Sui blockchain."
- Modified README.md to reflect the new branding, emphasizing the platform as a Web3 Patreon and enhancing the overview of its features.
- Adjusted layout.tsx to align the title and description with the updated branding, ensuring consistency across the application.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walron",
   "version": "1.0.0",
-  "description": "Walron - Privacy-first creator platform built on Sui Stack (Walrus + Seal)",
+  "description": "Walron - Web3 Patreon (Seal + Walrus) built on Sui blockchain",
   "scripts": {
     "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
