--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mysten/suins": "^0.9.10",
     "@tanstack/react-query": "^5.90.10",
     "next": "16.0.3",
+    "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
